--- a/Project.toml
+++ b/Project.toml
@@ -2,7 +2,7 @@ name = "filehandling"
 uuid = "4b8ed5e0-8069-11e8-094b-3f5425e6acdd"
 authors = ["Peter Bräuer <pb866@york.ac.uk>"]
 julia = "0.7-"
-version = "0.1.2"
+version = "0.2.0-DEV"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
