--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,10 @@
 name = "filehandling"
 uuid = "4b8ed5e0-8069-11e8-094b-3f5425e6acdd"
 authors = ["Peter Bräuer <pb866@york.ac.uk>"]
-julia = "0.7-"
+julia = "≥0.7"
 version = "0.1.3"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Juno = "e5e0dc1b-0480-54bc-9374-aad01c23163d"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
